# manus-like-converter

./: .env.example  .gitignore  README.md  api_server.py  chainlit_frontend.py  config.py  convert.py  main.py  old_readme.md  pyproject.toml  requirements.txt
core/: agent.py  context.py  converter_agent.py  enhanced_memory.py  faiss_memory.py  logging_config.py  memory.py  planner.py
llm/: openai_client.py
prompts/: converter_prompt.txt  planner_prompt.txt  system_prompt.txt
sandbox/: Dockerfile  sandbox.py
tools/: browser_tools.py  codeact_tools.py  file_tools.py  info_tools.py  message_tools.py  perl_tools.py  shell_tools.py  tool_registry.py
ui/: gradio_app.py
ui/tools/: deploy_tools.py  system_tools.py
