[project]
name = "manus-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "docker>=6.1.0",
    "faiss-cpu>=1.10.0",
    "gradio>=5.23.3",
    "langchain-openai>=0.3.13",
    "langchain>=0.0.267",
    "openai>=1.0.0",
    "playwright>=1.38.0",
    "prompt-toolkit>=3.0.39",
    "pydantic>=2.0.0",
    "pyreadline>=2.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.5.0",
    "structlog>=25.2.0",
    "tenacity>=8.2.2",
    "azure-identity>=1.21.0",
    "chainlit>=2.5.5",
]
